--- a/SpaceInvanders/nbproject/coverage.properties
+++ b/SpaceInvanders/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Wed Jun 13 01:04:45 EEST 2012
-coverage.activity=OFF
+#Thu Jun 14 23:06:16 EEST 2012
+coverage.activity=ON
 project.type=java
-coverage.coverageFile=coverage/coverage.emma
 coverage.templateFile=coverage/template.emma
+coverage.coverageFile=coverage/coverage.emma
