samma pa svenska

--- a/SpaceInvanders/nbproject/coverage.properties
+++ b/SpaceInvanders/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Thu Jun 14 23:06:16 EEST 2012
-coverage.activity=ON
+#Fri Jun 15 00:46:04 EEST 2012
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
